<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--    android:id="@+id/doma_input"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginHorizontal="20dp"-->
<!--    android:layout_marginTop="20dp"-->
<!--     app:boxStrokeColor="@color/my_pink"-->
<!--    android:hint="@string/domein"-->
<!--    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--&lt;!&ndash;    <com.google.android.material.textfield.TextInputEditText&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;    />&ndash;&gt;-->

<!--</com.google.android.material.textfield.TextInputLayout>-->


        <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/api_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="120dp"
    android:hint="@string/api_key"
             app:boxStrokeColor="@color/my_pink"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />

</com.google.android.material.textfield.TextInputLayout>


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--    android:id="@+id/dev_input"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginHorizontal="20dp"-->
<!--    android:layout_marginTop="20dp"-->
<!--    android:hint="@string/deviceid"-->
<!--    app:boxStrokeColor="@color/my_pink"-->

<!--    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--&lt;!&ndash;    <com.google.android.material.textfield.TextInputEditText&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;        />&ndash;&gt;-->

<!--</com.google.android.material.textfield.TextInputLayout>-->


   <RadioGroup
       android:id="@+id/radio_group"
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_marginTop="20dp"
       android:elevation="@dimen/cardview_compat_inset_shadow"
       android:checkedButton="@id/radio_03"
       >

       <RadioButton
           android:id="@+id/radio_01"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/push_01"
           android:paddingStart="6dp"
           android:paddingEnd="30dp"
           android:textStyle="bold"
           />

       <RadioButton
           android:id="@+id/radio_02"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/sms_01"
                  android:textStyle="bold"
                android:paddingStart="6dp"
                      android:paddingEnd="30dp"
           />

       <RadioButton
           android:id="@+id/radio_03"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/push_sms_01"
           android:paddingStart="6dp"
           android:enabled="true"
                  android:textStyle="bold"
           />

   </RadioGroup>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"

        android:id="@+id/savve"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        app:backgroundTint="@color/my_pink"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        />

       <Button
        android:id="@+id/button_select"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        app:backgroundTint="@color/my_pink"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
        android:text="@string/select"
        android:textColor="@color/white"

        android:textAppearance="?attr/textAppearanceLabelLarge"
        />


       <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        app:backgroundTint="@color/my_pink"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textAppearance="?attr/textAppearanceLabelLarge"
           />

       <Button
        android:id="@+id/disable_opti"
           style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        app:backgroundTint="@color/my_pink"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
        android:text="@string/dis"
        android:textColor="@color/white"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        />

       <Button
        android:id="@+id/check_app_verid"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp"
        app:backgroundTint="@color/my_pink"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
        android:text="@string/check"
        android:textColor="@color/white"
        android:textAppearance="?attr/textAppearanceLabelLarge"

        />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/version"
          android:textStyle="italic"
          android:textColor="?attr/colorOnSurface"
          android:layout_marginTop="8dp"
          android:layout_marginHorizontal="20dp"
          android:layout_gravity="center"
          android:gravity="center"
          android:textSize="20sp"
          />



</androidx.appcompat.widget.LinearLayoutCompat>