<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"

        android:layout_marginStart="30dp"
        android:layout_marginTop="156dp"
         />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="30dp"
         >


   <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/input_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    android:hint="@string/input_domen"
     app:boxStrokeColor="@color/my_pink"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />

</com.google.android.material.textfield.TextInputLayout>

<!--         <TextView-->
<!--             android:layout_width="170dp"-->
<!--             android:layout_height="24dp"-->
<!--             android:text="@string/input_domen"-->
<!--             android:layout_marginStart="30dp"-->

<!--             />-->

<!--         <com.google.android.material.textfield.TextInputEditText-->
<!--             android:id="@+id/input_domend"-->
<!--             android:layout_width="match_parent"-->
<!--             android:layout_height="50dp"-->
<!--             android:layout_marginTop="2dp"-->
<!--             android:layout_marginHorizontal="20dp"-->
<!--             android:layout_gravity="center_vertical"-->
<!--             android:paddingStart="14dp"-->
<!--             android:background="@drawable/border_draw_input"-->
<!--             />-->


        </LinearLayout>

        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="30dp"
         >

<!--         <TextView-->
<!--             android:layout_width="170dp"-->
<!--             android:layout_height="24dp"-->
<!--             android:text="@string/input_apik"-->
<!--             android:layout_marginStart="30dp"-->

<!--             />-->

<!--         <com.google.android.material.textfield.TextInputEditText-->
<!--             android:id="@+id/input_apikd"-->
<!--             android:layout_width="match_parent"-->
<!--             android:layout_height="50dp"-->
<!--             android:layout_gravity="center_vertical"-->
<!--             android:layout_marginTop="2dp"-->
<!--             android:paddingStart="14dp"-->
<!--             android:layout_marginHorizontal="20dp"-->
<!--             android:background="@drawable/border_draw_input"-->
<!--             />-->
<!--            -->


        <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/input_pass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    android:hint="@string/input_apik"
       app:boxStrokeColor="@color/my_pink"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:lines="1"
    />

</com.google.android.material.textfield.TextInputLayout>


     </LinearLayout>



       <Button
        style="@style/Widget.Material3.Button.ElevatedButton"

        android:id="@+id/button_go_next"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="20dp"
        app:backgroundTint="@color/my_pink"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
           android:text="@string/next_name"
        android:textColor="@color/white"
        android:textAppearance="?attr/textAppearanceLabelLarge"
           />

</LinearLayout>